# quantchallenge-2025

./: .competition  .gitignore  README.md  pyproject.toml  setup.sh
qch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qch2025/outputs/: 2025-09-20 15:40:25.206323_predicted.csv  2025-09-20 15:46:23.018355_predicted.csv  2025-09-20 16:06:22.601963_predicted.csv  2025-09-20 16:36:10.787757_predicted.csv  2025-09-20 17:38:36.090683_predicted.csv  2025-09-20 18:07:08.964899_predicted.csv  2025-09-20 18:24:48.835144_predicted.csv  2025-09-20 18:25:19.686466_predicted.csv  2025-09-20 18:42:31.277939_predicted.csv  2025-09-20 18:49:53.150845_predicted.csv  2025-09-20 18:59:32.417717_predicted.csv  2025-09-20 19:03:18.246851_predicted.csv  2025-09-20 19:13:42.565876_predicted.csv  2025-09-20 19:54:19.755323_predicted.csv  2025-09-20 20:09:47.308822_predicted.csv  2025-09-20 20:15:50.330486_predicted.csv  2025-09-20 20:34:24.410433_predicted.csv  2025-09-20 21:06:04.007406_predicted.csv  2025-09-21 14:03:02.785457_predicted.csv  2025-09-21 18:19:16.523756_predicted.csv  2025-09-21 18:20:33.275782_predicted.csv  2025-09-21 18:21:44.853795_predicted.csv  2025-09-21 18:24:24.028809_predicted.csv  2025-09-21 18:36:54.938033_predicted.csv  2025-09-21 18:38:51.644091_predicted.csv  2025-09-21 18:40:26.658948_predicted.csv  2025-09-21 18:41:45.268094_predicted.csv  2025-09-21 18:44:04.459218_predicted.csv  2025-09-21 18:44:37.209961_predicted.csv  2025-09-21 18:45:20.884418_predicted.csv  2025-09-21 18:46:04.773283_predicted.csv  2025-09-21 18:46:35.954339_predicted.csv  (+15 more)
(+18 files in other folders)
