[build-system]
requires = ["setuptools>=65.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qch"
version = "0.1.0"
description = "Submission for QuantChallenge 2025"
authors = [{name = "Christopher Pukas", email = "cp824@ic.ac.uk"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]